relative positioning, using separators

--- a/Date/Date.ini
+++ b/Date/Date.ini
@@ -20,56 +20,53 @@ Substitute="Monday":"pondìlí","Tuesday":"úterý","Wednesday":"støeda","Thursday":
 
 [measureDay]
 Measure=Time
-Format=%d
+Format=%#d
 
 [measureMonthYear]
 Measure=Time
 Format=%B %Y
 Substitute="January":"leden","February":"únor","March":"bøezen","April":"duben","May":"kvìten","June":"èerven","July":"èervenec","August":"srpen","September":"záøí","October":"øíjen","November":"listopad","December":"prosinec"
 
-[meterBackground]
-Meter=String
-X=0
-Y=0
-W=160
-H=130
-SolidColor=0,0,0,50
+[meterSeparatorTop]
+Meter=Image
+MeterStyle=styleSeparator
 
 [meterDayOfWeek]
 Meter=String
-StringAlign=CenterCenter
+StringAlign=Center
 MeterStyle=styleDayMonthYear
 MeasureName=measureDayOfWeek
 X=80
-Y=17
-W=150
-H=24
+Y=0R
 Text="%1"
 SolidColor=255,0,0,100
 
 [meterDay]
 Meter=String
-StringAlign=CenterCenter
+StringAlign=Center
 MeterStyle=styleDay
 MeasureName=measureDay
 X=80
-Y=65
-W=150
-H=72
+Y=0R
 Text="%1"
 SolidColor=0,255,0,100
 
 [meterMonthYear]
 Meter=String
-StringAlign=CenterCenter
+StringAlign=Center
 MeterStyle=styleDayMonthYear
 MeasureName=measureMonthYear
 X=80
-Y=113
-W=150
-H=24
+Y=0R
 Text="%1"
 SolidColor=0,0,255,100
+
+[meterSeparatorBottom]
+Meter=Image
+MeterStyle=styleSeparator
+
+[styleSeparator]
+@include2="#ROOTCONFIGPATH#\StyleSeparator.inc"
 
 [styleDayMonthYear]
 StringEffect=#stringEffect#
