--- a/Time/Time.ini
+++ b/Time/Time.ini
@@ -17,23 +17,31 @@ License=Creative Commons BY-NC-SA 3.0
 Measure=Time
 Format=%H:%M
 
-[meterBackground]
-Meter=String
-X=0
-Y=0
-W=160
-H=90
-SolidColor=0,0,0,50
+[meterSeparatorTop]
+Meter=Image
+MeterStyle=styleSeparator
 
 [meterTime]
 Meter=String
-StringAlign=CenterCenter
+StringAlign=Center
 MeterStyle=styleBigTime
 MeasureName=measureTime
 X=80
-Y=45
+Y=0R
 Text="%1"
 SolidColor=255,255,0,100
 
+[meterSeparatorBottom]
+Meter=Image
+MeterStyle=styleSeparator
+
+[styleSeparator]
+@include2="#ROOTCONFIGPATH#\StyleSeparator.inc"
+
 [styleBigTime]
-@include2="#ROOTCONFIGPATH#\StyleBigTime.inc"
+StringEffect=#stringEffect#
+FontEffectColor=#fontEffectColor#
+FontColor=#fontColor#
+FontFace=#fontFace#
+FontSize=40
+AntiAlias=1
