--- a/Time/Time.ini
+++ b/Time/Time.ini
@@ -5,43 +5,42 @@ Update=1000
 BackgroundMode=1
 
 [Metadata]
-Name=Digitální hodiny
-Description=Zobrazí aktuální èas
+Name=Time
+Description=Displays current time.
 Version=1.0.0
 License=Creative Commons BY-NC-SA 3.0
 
 [Variables]
-@include1="#ROOTCONFIGPATH#\Variables.inc"
+@include1=#ROOTCONFIGPATH#\Variables.inc
 
-[measureTime]
+[MeasureTime]
 Measure=Time
 Format=%H:%M
 
-[meterSeparatorTop]
+[MeterSeparatorTop]
 Meter=Image
-MeterStyle=styleSeparator
+MeterStyle=StyleSeparator
 
-[meterTime]
+[MeterTime]
 Meter=String
 StringAlign=Center
-MeterStyle=styleBigTime
-MeasureName=measureTime
+MeterStyle=StyleBigTime
+MeasureName=MeasureTime
 X=80
 Y=0R
-Text="%1"
 SolidColor=255,255,0,100
 
-[meterSeparatorBottom]
+[MeterSeparatorBottom]
 Meter=Image
-MeterStyle=styleSeparator
+MeterStyle=StyleSeparator
 
-[styleSeparator]
-@include2="#ROOTCONFIGPATH#\StyleSeparator.inc"
+[StyleSeparator]
+@include2=#ROOTCONFIGPATH#\StyleSeparator.inc
 
-[styleBigTime]
-StringEffect=#stringEffect#
-FontEffectColor=#fontEffectColor#
-FontColor=#fontColor#
-FontFace=#fontFace#
+[StyleBigTime]
+StringEffect=#StringEffect#
+FontEffectColor=#FontEffectColor#
+FontColor=#FontColor#
+FontFace=#FontFace#
 FontSize=40
 AntiAlias=1
