--- a/AOTime/AOTime.ini
+++ b/AOTime/AOTime.ini
@@ -5,53 +5,52 @@ Update=1000
 BackgroundMode=1
 
 [Metadata]
-Name=Èas v Atlantica Online
-Description=Zobrazí aktuální serverový èas Atlantica Online
+Name=Atlantica Online time
+Description=Displays current Atlantica Online server time.
 Version=1.0.0
 License=Creative Commons BY-NC-SA 3.0
 
 [Variables]
-@include1="#ROOTCONFIGPATH#\Variables.inc"
+@include1=#ROOTCONFIGPATH#\Variables.inc
 
-[measureTime]
+[MeasureTime]
 Measure=Time
 TimeZone=-8.0
 Format=%#I:%M %p
 
-[meterSeparatorTop]
+[MeterSeparatorTop]
 Meter=Image
-MeterStyle=styleSeparator
+MeterStyle=StyleSeparator
 
-[meterIcon]
+[MeterIcon]
 Meter=Image
 ImageName=#@#\AO.png
 X=5
 Y=0R
 SolidColor=128,255,255,100
 
-[meterTime]
+[MeterTime]
 Meter=String
 StringAlign=Center
-MeterStyle=styleAOTime
-MeasureName=measureTime
+MeterStyle=StyleAOTime
+MeasureName=MeasureTime
 X=96
 Y=0r
 H=32
 W=118
-Text="%1"
 SolidColor=0,255,255,100
 
-[meterSeparatorBottom]
+[MeterSeparatorBottom]
 Meter=Image
-MeterStyle=styleSeparator
+MeterStyle=StyleSeparator
 
-[styleSeparator]
-@include2="#ROOTCONFIGPATH#\StyleSeparator.inc"
+[StyleSeparator]
+@include2=#ROOTCONFIGPATH#\StyleSeparator.inc
 
-[styleAOTime]
-StringEffect=#stringEffect#
-FontEffectColor=#fontEffectColor#
-FontColor=#fontColor#
-FontFace=#fontFace#
+[StyleAOTime]
+StringEffect=#StringEffect#
+FontEffectColor=#FontEffectColor#
+FontColor=#FontColor#
+FontFace=#FontFace#
 FontSize=16
 AntiAlias=1
