--- a/Date/Date.ini
+++ b/Date/Date.ini
@@ -5,81 +5,78 @@ Update=1000
 BackgroundMode=1
 
 [Metadata]
-Name=Digitální hodiny
-Description=Zobrazí aktuální datum
+Name=Date
+Description=Displays current date. Czech translation.
 Version=1.0.0
 License=Creative Commons BY-NC-SA 3.0
 
 [Variables]
-@include1="#ROOTCONFIGPATH#\Variables.inc"
+@include1=#ROOTCONFIGPATH#\Variables.inc
 
-[measureDayOfWeek]
+[MeasureDayOfWeek]
 Measure=Time
 Format=%A
 Substitute="Monday":"pondìlí","Tuesday":"úterý","Wednesday":"støeda","Thursday":"ètvrtek","Friday":"pátek","Saturday":"sobota","Sunday":"nedìle"
 
-[measureDay]
+[MeasureDay]
 Measure=Time
 Format=%#d
 
-[measureMonthYear]
+[MeasureMonthYear]
 Measure=Time
 Format=%B %Y
 Substitute="January":"leden","February":"únor","March":"bøezen","April":"duben","May":"kvìten","June":"èerven","July":"èervenec","August":"srpen","September":"záøí","October":"øíjen","November":"listopad","December":"prosinec"
 
-[meterSeparatorTop]
+[MeterSeparatorTop]
 Meter=Image
-MeterStyle=styleSeparator
+MeterStyle=StyleSeparator
 
-[meterDayOfWeek]
+[MeterDayOfWeek]
 Meter=String
 StringAlign=Center
-MeterStyle=styleDayMonthYear
-MeasureName=measureDayOfWeek
+MeterStyle=StyleDayMonthYear
+MeasureName=MeasureDayOfWeek
 X=80
 Y=0R
-Text="%1"
 SolidColor=255,0,0,100
 
-[meterDay]
+[MeterDay]
 Meter=String
 StringAlign=Center
-MeterStyle=styleDay
-MeasureName=measureDay
+MeterStyle=StyleDay
+MeasureName=MeasureDay
 X=80
 Y=0R
-Text="%1"
 SolidColor=0,255,0,100
 
-[meterMonthYear]
+[MeterMonthYear]
 Meter=String
 StringAlign=Center
-MeterStyle=styleDayMonthYear
-MeasureName=measureMonthYear
+MeterStyle=StyleDayMonthYear
+MeasureName=MeasureMonthYear
 X=80
 Y=0R
-Text="%1"
 SolidColor=0,0,255,100
 
-[meterSeparatorBottom]
+[MeterSeparatorBottom]
 Meter=Image
-MeterStyle=styleSeparator
+MeterStyle=StyleSeparator
 
-[styleSeparator]
-@include2="#ROOTCONFIGPATH#\StyleSeparator.inc"
+[StyleSeparator]
+@include2=#ROOTCONFIGPATH#\StyleSeparator.inc
 
-[styleDayMonthYear]
-StringEffect=#stringEffect#
-FontEffectColor=#fontEffectColor#
-FontColor=#fontColor#
-FontFace=#fontFace#
+[StyleDayMonthYear]
+StringEffect=#StringEffect#
+FontEffectColor=#FontEffectColor#
+FontColor=#FontColor#
+FontFace=#FontFace#
 FontSize=12
 AntiAlias=1
 
-[styleDay]
-StringEffect=#stringEffect#
-FontEffectColor=#fontEffectColor#
-FontColor=#fontColor#
-FontFace=#fontFace#
+[StyleDay]
+StringEffect=#StringEffect#
+FontEffectColor=#FontEffectColor#
+FontColor=#FontColor#
+FontFace=#FontFace#
 FontSize=54
 AntiAlias=1
