--- a/Date/DateTiny.ini
+++ b/Date/DateTiny.ini
@@ -5,44 +5,43 @@ Update=1000
 BackgroundMode=1
 
 [Metadata]
-Name=Digitální hodiny
-Description=Zobrazí aktuální datum
+Name=Date
+Description=Displays current date. Czech translation.
 Version=1.0.0
 License=Creative Commons BY-NC-SA 3.0
 
 [Variables]
-@include1="#ROOTCONFIGPATH#\Variables.inc"
+@include1=#ROOTCONFIGPATH#\Variables.inc
 
-[measureDate]
+[MeasureDate]
 Measure=Time
 Format=%A %#d. %#m. %Y
 Substitute="Monday":"pondìlí","Tuesday":"úterý","Wednesday":"støeda","Thursday":"ètvrtek","Friday":"pátek","Saturday":"sobota","Sunday":"nedìle"
 
-[meterSeparatorTop]
+[MeterSeparatorTop]
 Meter=Image
-MeterStyle=styleSeparator
+MeterStyle=StyleSeparator
 
-[meterDate]
+[MeterDate]
 Meter=String
 StringAlign=Center
-MeterStyle=styleDate
-MeasureName=measureDate
+MeterStyle=StyleDate
+MeasureName=MeasureDate
 X=80
 Y=0R
-Text="%1"
 SolidColor=255,0,255,100
 
-[meterSeparatorBottom]
+[MeterSeparatorBottom]
 Meter=Image
-MeterStyle=styleSeparator
+MeterStyle=StyleSeparator
 
-[styleSeparator]
-@include2="#ROOTCONFIGPATH#\StyleSeparator.inc"
+[StyleSeparator]
+@include2=#ROOTCONFIGPATH#\StyleSeparator.inc
 
-[styleDate]
-StringEffect=#stringEffect#
-FontEffectColor=#fontEffectColor#
-FontColor=#fontColor#
-FontFace=#fontFace#
+[StyleDate]
+StringEffect=#StringEffect#
+FontEffectColor=#FontEffectColor#
+FontColor=#FontColor#
+FontFace=#FontFace#
 FontSize=12
 AntiAlias=1
