removed one of date skin variants

--- a/Skins/CuteSideBar/Date/Date.ini
+++ b/Skins/CuteSideBar/Date/Date.ini
@@ -13,50 +13,23 @@ License=Creative Commons BY-NC-SA 3.0
 [Variables]
 @include1=#ROOTCONFIGPATH#\Variables.inc
 
-[MeasureDayOfWeek]
+[MeasureDate]
 Measure=Time
-Format=%A
+Format=%A %#d. %#m. %Y
 Substitute="Monday":"pondìlí","Tuesday":"úterý","Wednesday":"støeda","Thursday":"ètvrtek","Friday":"pátek","Saturday":"sobota","Sunday":"nedìle"
-
-[MeasureDay]
-Measure=Time
-Format=%#d
-
-[MeasureMonthYear]
-Measure=Time
-Format=%B %Y
-Substitute="January":"leden","February":"únor","March":"bøezen","April":"duben","May":"kvìten","June":"èerven","July":"èervenec","August":"srpen","September":"záøí","October":"øíjen","November":"listopad","December":"prosinec"
 
 [MeterSeparatorTop]
 Meter=Image
 MeterStyle=StyleSeparator
 
-[MeterDayOfWeek]
+[MeterDate]
 Meter=String
 StringAlign=Center
-MeterStyle=StyleDayMonthYear
-MeasureName=MeasureDayOfWeek
+MeterStyle=StyleDate
+MeasureName=MeasureDate
 X=80
 Y=0R
-SolidColor=255,0,0,100
-
-[MeterDay]
-Meter=String
-StringAlign=Center
-MeterStyle=StyleDay
-MeasureName=MeasureDay
-X=80
-Y=0R
-SolidColor=0,255,0,100
-
-[MeterMonthYear]
-Meter=String
-StringAlign=Center
-MeterStyle=StyleDayMonthYear
-MeasureName=MeasureMonthYear
-X=80
-Y=0R
-SolidColor=0,0,255,100
+SolidColor=255,0,255,100
 
 [MeterSeparatorBottom]
 Meter=Image
@@ -65,18 +38,10 @@ MeterStyle=StyleSeparator
 [StyleSeparator]
 @include2=#ROOTCONFIGPATH#\StyleSeparator.inc
 
-[StyleDayMonthYear]
+[StyleDate]
 StringEffect=#StringEffect#
 FontEffectColor=#FontEffectColor#
 FontColor=#FontColor#
 FontFace=#FontFace#
 FontSize=12
-AntiAlias=1
-
-[StyleDay]
-StringEffect=#StringEffect#
-FontEffectColor=#FontEffectColor#
-FontColor=#FontColor#
-FontFace=#FontFace#
-FontSize=54
 AntiAlias=1
