removed testing colors

--- a/Skins/CuteSideBar/CPU/CPU.ini
+++ b/Skins/CuteSideBar/CPU/CPU.ini
@@ -39,7 +39,7 @@ Y=0R
 W=150
 H=23
 Text=CPU
-SolidColor=0,255,128,100
+SolidColor=#SolidColor#
 
 [MeterCPU]
 Meter=String
@@ -59,7 +59,7 @@ X=5
 Y=0R
 W=150
 H=90
-SolidColor=0,255,128,100
+SolidColor=#SolidColor#
 
 [MeterSeparatorBottom]
 Meter=Image
