--- a/Skins/CuteSideBar/RAM/RAM.ini
+++ b/Skins/CuteSideBar/RAM/RAM.ini
@@ -39,7 +39,7 @@ Y=0R
 W=150
 H=23
 Text=RAM
-SolidColor=0,128,255,100
+SolidColor=#SolidColor#
 
 [MeterRAM]
 Meter=String
@@ -60,7 +60,7 @@ X=5
 Y=0R
 W=150
 H=90
-SolidColor=0,128,255,100
+SolidColor=#SolidColor#
 
 [MeterSeparatorBottom]
 Meter=Image
