--- a/Skins/CuteSideBar/GPU/GPU.ini
+++ b/Skins/CuteSideBar/GPU/GPU.ini
@@ -56,7 +56,7 @@ Y=0R
 W=150
 H=23
 Text=GPU
-SolidColor=0,255,64,100
+SolidColor=#SolidColor#
 
 [MeterGPU]
 Meter=String
@@ -77,7 +77,7 @@ W=150
 H=18
 Prefix='Core: '
 Postfix=%
-SolidColor=0,255,64,100
+SolidColor=#SolidColor#
 
 [MeterGPUMemoryPercent]
 Meter=String
@@ -89,7 +89,7 @@ W=150
 H=18
 Prefix='Memory: '
 Postfix=%
-SolidColor=0,255,64,100
+SolidColor=#SolidColor#
 
 [MeterSeparatorBottom]
 Meter=Image
